@@ -3,12 +3,16 @@ package ace.org.epms_backend.service.feedback360.impl;
 import ace.org.epms_backend.dto.feedback360.FeedbackRequestResponse;
 import ace.org.epms_backend.enums.FeedbackRelationship;
 import ace.org.epms_backend.enums.FeedbackStatus;
+import ace.org.epms_backend.exception.NotFoundException;
 import ace.org.epms_backend.mapper.FeedbackMapper;
 import ace.org.epms_backend.model.appraisal.AppraisalCycle;
 import ace.org.epms_backend.model.employee.Employee;
+import ace.org.epms_backend.model.employee.EmployeeTeam;
 import ace.org.epms_backend.model.feedback360.FeedbackRequest;
 import ace.org.epms_backend.repository.EmployeeRepository;
-import ace.org.epms_backend.repository.appraisal.AppraisalCycleRepository;
+import ace.org.epms_backend.repository.AppraisalCycleRepository;
+import ace.org.epms_backend.repository.EmployeeDepartmentRepository;
+import ace.org.epms_backend.repository.employee.EmployeeTeamRepository;
 import ace.org.epms_backend.repository.feedback360.FeedbackRequestRepository;
 import ace.org.epms_backend.service.feedback360.FeedbackRequestService;
 import lombok.RequiredArgsConstructor;
@@ -17,81 +21,125 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.Random;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class FeedbackRequestServiceImpl implements FeedbackRequestService {
 
+    private final FeedbackRequestRepository requestRepository;
     private final EmployeeRepository employeeRepository;
-    private final FeedbackRequestRepository feedbackRequestRepository;
-    private final AppraisalCycleRepository appraisalCycleRepository;
+    private final AppraisalCycleRepository cycleRepository;
+    private final EmployeeTeamRepository teamRepository;
+    private final EmployeeDepartmentRepository departmentRepository;
     private final FeedbackMapper feedbackMapper;
-
-    private final Random random = new Random();
 
     @Override
     @Transactional
     public void generate360FeedbackRequests(Long cycleId, int minPeers, int maxPeers, int minSubs, int maxSubs) {
-        AppraisalCycle cycle = appraisalCycleRepository.findById(cycleId)
-                .orElseThrow(() -> new RuntimeException("Appraisal cycle not found with ID: " + cycleId));
+        AppraisalCycle cycle = cycleRepository.findById(cycleId)
+                .orElseThrow(() -> new NotFoundException("Cycle not found"));
 
         List<Employee> allEmployees = employeeRepository.findAll();
 
-        for (Employee target : allEmployees) {
+        for (Employee employee : allEmployees) {
             // 1. SELF
-            createRequestIfNotExists(cycle, target, target, FeedbackRelationship.SELF, false);
+            createRequest(cycle, employee, employee, FeedbackRelationship.SELF, false);
 
             // 2. MANAGER
-            if (target.getDirectManager() != null) {
-                createRequestIfNotExists(cycle, target, target.getDirectManager(), FeedbackRelationship.DIRECT_MANAGER, false);
+            if (employee.getDirectManager() != null) {
+                createRequest(cycle, employee, employee.getDirectManager(), FeedbackRelationship.MANAGER, false);
             }
 
-            // 3. PEERS
-            if (target.getDirectManager() != null) {
-                List<Employee> peers = employeeRepository.findByDirectManagerAndIdNot(target.getDirectManager(), target.getId());
-                Collections.shuffle(peers);
-                int peerCount = getRandomBetween(minPeers, maxPeers);
-                peers.stream()
-                        .limit(peerCount)
-                        .forEach(peer -> createRequestIfNotExists(cycle, target, peer, FeedbackRelationship.PEER, true));
-            }
+            // 3. PEERS (From Team) - with limits
+            List<Employee> peers = findPeers(employee);
+            Collections.shuffle(peers);
+            int peerCount = Math.min(peers.size(), maxPeers);
+            peers.stream().limit(peerCount).forEach(peer -> 
+                createRequest(cycle, employee, peer, FeedbackRelationship.PEER, true));
 
-            // 4. SUBORDINATES
-            List<Employee> subs = target.getSubordinates();
+            // 4. SUBORDINATES - with limits
+            List<Employee> subs = employee.getSubordinates();
             if (subs != null && !subs.isEmpty()) {
                 Collections.shuffle(subs);
-                int subCount = getRandomBetween(minSubs, maxSubs);
-                subs.stream()
-                        .limit(subCount)
-                        .forEach(sub -> createRequestIfNotExists(cycle, target, sub, FeedbackRelationship.SUBORDINATE, true));
+                int subCount = Math.min(subs.size(), maxSubs);
+                subs.stream().limit(subCount).forEach(sub -> 
+                    createRequest(cycle, employee, sub, FeedbackRelationship.SUBORDINATE, true));
             }
+        }
+    }
+
+    private List<Employee> findPeers(Employee employee) {
+        List<EmployeeTeam> teams = teamRepository.findByEmployeeId(employee.getId());
+        if (!teams.isEmpty()) {
+            Long primaryTeamId = teams.stream()
+                    .filter(EmployeeTeam::getIsPrimary)
+                    .findFirst()
+                    .orElse(teams.get(0))
+                    .getTeam().getTeamId();
+            
+            return teamRepository.findByTeamTeamId(primaryTeamId).stream()
+                    .map(EmployeeTeam::getEmployee)
+                    .filter(e -> !e.getId().equals(employee.getId()))
+                    .collect(Collectors.toList());
+        }
+        return Collections.emptyList();
+    }
+
+    private void createRequest(AppraisalCycle cycle, Employee target, Employee evaluator, FeedbackRelationship rel, boolean anon) {
+        if (!requestRepository.existsByTargetUserIdAndEvaluatorIdAndCycleCycleId(target.getId(), evaluator.getId(), cycle.getCycleId())) {
+            FeedbackRequest request = FeedbackRequest.builder()
+                    .targetUser(target)
+                    .evaluator(evaluator)
+                    .cycle(cycle)
+                    .relationship(rel)
+                    .isAnonymous(anon)
+                    .status(FeedbackStatus.PENDING)
+                    .build();
+            requestRepository.save(request);
         }
     }
 
     @Override
-    public List<FeedbackRequestResponse> getMyPendingRequests(Long employeeId) {
-        return feedbackRequestRepository.findByEvaluatorIdAndStatus(employeeId, FeedbackStatus.PENDING)
-                .stream()
+    public List<FeedbackRequestResponse> getMyPendingRequests(Long evaluatorId) {
+        return requestRepository.findByEvaluatorIdAndStatus(evaluatorId, FeedbackStatus.PENDING).stream()
                 .map(feedbackMapper::toRequestResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    private void createRequestIfNotExists(AppraisalCycle cycle, Employee target, Employee evaluator, FeedbackRelationship relationship, boolean anonymous) {
-        if (!feedbackRequestRepository.existsByTargetUserIdAndEvaluatorIdAndCycleCycleId(target.getId(), evaluator.getId(), cycle.getCycleId())) {
-            FeedbackRequest request = FeedbackRequest.builder()
-                    .cycle(cycle)
-                    .targetUser(target)
-                    .evaluator(evaluator)
-                    .relationship(relationship)
-                    .isAnonymous(anonymous)
-                    .status(FeedbackStatus.PENDING)
-                    .build();
-            feedbackRequestRepository.save(request);
-        }
+    @Override
+    public List<FeedbackRequestResponse> getRequestsByEmployee(Long targetEmployeeId, Long cycleId) {
+        return requestRepository.findByTargetUserIdAndCycleCycleId(targetEmployeeId, cycleId).stream()
+                .map(feedbackMapper::toRequestResponse)
+                .collect(Collectors.toList());
     }
 
-    private int getRandomBetween(int min, int max) {
-        return random.nextInt(max - min + 1) + min;
+    @Override
+    public List<FeedbackRequestResponse> getRequestsByCycle(Long cycleId) {
+        return requestRepository.findByCycleCycleId(cycleId).stream()
+                .map(feedbackMapper::toRequestResponse)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public FeedbackRequestResponse getRequest(Long requestId) {
+        return requestRepository.findById(requestId)
+                .map(feedbackMapper::toRequestResponse)
+                .orElseThrow(() -> new NotFoundException("Request not found"));
+    }
+
+    @Override
+    @Transactional
+    public void updateRequestStatus(Long requestId, FeedbackStatus status) {
+        FeedbackRequest request = requestRepository.findById(requestId)
+                .orElseThrow(() -> new NotFoundException("Request not found"));
+        request.setStatus(status);
+        requestRepository.save(request);
+    }
+
+    @Override
+    @Transactional
+    public void deleteRequest(Long requestId) {
+        requestRepository.deleteById(requestId);
     }
 }
